appId: global.safe.mobileapp
---
- launchApp
- tapOn:
    id: "pending-transactions"
- tapOn: "(tabs)"
- tapOn:
    id: "tabTransactions"
- "scroll"
- tapOn:
    id: "tabSettings"
- assertVisible: "Signers"

